--- a/index.html
+++ b/index.html
@@ -3,9 +3,70 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <title>File HTML index</title>
 </head>
 <body>
-  
+  <nav class="navbar navbar-expand-lg bg-body-tertiary shadow">
+    <div class="container-fluid">
+        <a class="navbar-brand" href="#"><b>Media Online</b></a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="index1.html">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="form1.html" >Form</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="https://www.instagram.com/sanfdghan_/profilecard/?igsh=MWtpYjQ4YmJoMHR1ag==">Instagram</a>
+                </li>
+            </ul>
+            <ul class="navbar-nav ms-auto">
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle btn btn-secondary" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        Theme
+                    </a>
+                    <ul class="dropdown-menu dropdown-menu-end">
+                        <li><a class="dropdown-item" href="#">Action</a></li>
+                        <li><a class="dropdown-item" href="#">Another action</a></li>
+                        <li><a class="dropdown-item" href="#">Something else here</a></li>
+                    </ul>
+                </li>
+            </ul>
+        </div>
+    </div>
+</nav>
+
+
+<header>
+   <center> <h1 class="mt-4">Media Online</h1></center>
+</header>
+
+<div class="container">
+    <h3>Sosial Media Developer</h3>
+    <p class="lead">Belajar dan berbagi agar hidup menjadi lebih baik</p>
+    
+    <h4>Benefit join di Media Online</h4>
+    <ul class="list-group mb-4">
+        <li class="list-group-item">Mendapatkan motivasi dari sesama para Developer</li>
+        <li class="list-group-item">Sharing knowledge</li>
+        <li class="list-group-item">Dibuat oleh calon web developer</li>
+    </ul>
+    
+    <h4>Cara bergabung ke Media Online</h4>
+    <ol class="list-group list-group-numbered">
+        <li class="list-group-item">Mengunjungi Website ini</li>
+        <li class="list-group-item">Mendaftarkan di <a href="form1.html" class="text-dark" >Form Sign Up</a></li>
+        <li class="list-group-item">Selesai</li>
+    </ol>
+</div>
+
+<footer class="text-center mt-5 py-3 border-top bg-light">
+    &copy; 2024 Media Online. Semua Hak Cipta Dilindungi.
+</footer>
 </body>
 </html>
