--- a/welcome.html
+++ b/welcome.html
@@ -3,9 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://cdn .jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <title>Selamat Datang</title>
 </head>
 <body>
-  
+  <div class="container">
+    <center><h1>Selamat Datang!</h1></center>
+    <center><h3>Terimakasih telah belajar di website kami, Media belajar kita bersama</h3></center>
+  </div>
 </body>
 </html>
